--- a/app/src/app.html
+++ b/app/src/app.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"
+  rel="stylesheet" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
